--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
     <h1>⚠️ Ne scannez pas n'importe quoi ⚠️</h1>
     <p>Un simple QR code peut voler vos données, installer un virus ou vous piéger.</p>
     <div class="warning">Réfléchissez avant de scanner.</div>
+    <img src="affiche qrcode FR.png" alt="Image effrayante" style="max-width: 80%; margin-top: 2em;">
+
+    
   </div>
 
   <script>
