--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       background: black;
       color: red;
       font-family: 'Courier New', Courier, monospace;
-      overflow: hidden;
+      overflow-y: auto; /* ✅ Active la barre de défilement verticale */
+      overflow-x: hidden; /* Empêche le défilement horizontal */
     }
 
     .container {
@@ -68,9 +69,9 @@
     <h1>⚠️ Ne scannez pas n'importe quoi ⚠️</h1>
     <p>Un simple QR code peut voler vos données, installer un virus ou vous piéger.</p>
     <div class="warning">Réfléchissez avant de scanner.</div>
-    <img src="affiche qrcode FR.png" alt="Image effrayante" style="max-width: 80%; margin-top: 2em;">
-
     
+    <!-- ✅ Image centrée avec marge -->
+    <img src="affiche qrcode FR.png" alt="Affiche de sensibilisation QR code" style="display: block; margin: 2em auto; max-width: 80%;">
   </div>
 
   <script>
