--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     <div class="warning">Réfléchissez avant de scanner.</div>
     
     <!-- ✅ Image centrée avec marge -->
-    <img src="affiche qrcode FR.png" alt="Affiche de sensibilisation QR code" style="display: block; margin: 2em auto; max-width: 80%;">
+    <img src="affiche qrcode FR.png" alt="Affiche de sensibilisation QR code"
+     style="display: block; margin-left: auto; margin-right: auto; margin-top: 2em; max-width: 80%; height: auto;">
+
   </div>
 
   <script>
