--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
   <meta charset="UTF-8">
   <title>Attention aux QR Codes</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       background: black;
       color: red;
       font-family: 'Courier New', Courier, monospace;
+      height: 100%;
       overflow-y: auto; /* ✅ Active la barre de défilement verticale */
-      overflow-x: hidden; /* Empêche le défilement horizontal */
     }
 
     .container {
-      text-align: center;
+      max-width: 1000px;
+      margin: 0 auto; /* ✅ Centre le conteneur horizontalement */
       padding: 10vh 5vw;
+      text-align: center;
     }
 
     h1 {
@@ -38,6 +40,13 @@
       font-weight: bold;
       border: 3px solid white;
       animation: pulse 2s infinite;
+    }
+
+    img {
+      display: block;
+      margin: 2em auto;
+      max-width: 80%;
+      height: auto;
     }
 
     @keyframes glitch {
@@ -69,11 +78,9 @@
     <h1>⚠️ Ne scannez pas n'importe quoi ⚠️</h1>
     <p>Un simple QR code peut voler vos données, installer un virus ou vous piéger.</p>
     <div class="warning">Réfléchissez avant de scanner.</div>
-    
-    <!-- ✅ Image centrée avec marge -->
-    <img src="affiche qrcode FR.png" alt="Affiche de sensibilisation QR code"
-     style="display: block; margin-left: auto; margin-right: auto; margin-top: 2em; max-width: 80%; height: auto;">
 
+    <!-- ✅ Image bien centrée -->
+    <img src="affiche qrcode FR.png" alt="Affiche de sensibilisation QR code">
   </div>
 
   <script>
