--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@
 <body>
   <canvas id="bg"></canvas>
   <div class="container">
-    <h1>⚠️ Ne scannez pas n'importe quoi ⚠️</h1>
-    <p>Un simple QR code peut voler vos données, installer un virus ou vous piéger.</p>
-    <div class="warning">Réfléchissez avant de scanner.</div>
+    
     <img src="affiche qrcode FR.png" alt="Affiche de sensibilisation QR code"
      style="display: block; margin-left: auto; margin-right: auto; margin-top: 2em; max-width: 80%; height: auto;">
+    <h1>⚠️ Posez vous des questions avant de scanner ⚠️</h1>
+    <div class="warning">Un simple QR code peut voler vos données, installer un virus ou vous piéger.Un simple QR code peut voler vos données, installer un virus ou vous piéger.</div>
+   
 
   </div>
 
