--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <img src="affiche qrcode FR.png" alt="Affiche de sensibilisation QR code"
      style="display: block; margin-left: auto; margin-right: auto; margin-top: 2em; max-width: 80%; height: auto;">
     <h1>⚠️ Posez vous des questions avant de scanner ⚠️</h1>
-    <div class="warning">Un simple QR code peut voler vos données, installer un virus ou vous piéger.</div>
+    <div class="warning">OEEE</div>
    
 
   </div>
