--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     html, body {
       margin: 0;
       padding: 0;
-      background: #3a5fcd; /* Un bleu*/
+      background: black
       color: red;
       font-family: 'Courier New', Courier, monospace;
       height: 100%;
